responsive and fonts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyryse Technology - Enter the Future</title>
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Russo+One&family=Orbitron:wght@900&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -19,8 +19,23 @@
             justify-content: center;
             overflow: hidden;
         }
+        @media (max-width: 600px) {
+            .futuristic {
+                font-size: 2.2rem;
+                padding: 0 1rem;
+            }
+            .glitch {
+                font-size: 1.1rem;
+                margin-top: 1.2rem;
+                padding: 0 1rem;
+            }
+            .footer {
+                font-size: 0.9rem;
+                padding: 0 0.5rem;
+            }
+        }
         .futuristic {
-            font-family: 'Russo One', 'Share Tech Mono', monospace;
+            font-family: 'Orbitron', 'Russo One', 'Share Tech Mono', monospace;
             font-size: 4.5rem;
             color: #00ffe7;
             letter-spacing: 0.18em;
