Add favicon ico

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+    <link rel="icon" type="image/png" href="skyryse.png">
     <style>
         /* SKYRYSE Brand Font */
         .skyryse-brand {
