Change some change

--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@
             <div class="contact-modal-actions">
                 <button class="contact-modal-btn primary" onclick="mail()">
                     <i class="fas fa-envelope"></i>
-                    Open Email App
+                    Send Mail
                 </button>
                 <button class="contact-modal-btn secondary" onclick="copyToClipboard('skyryse.technologies@gmail.com', 'Email')">
                     <i class="fas fa-copy"></i>
@@ -2133,8 +2133,6 @@
             }
         `;
         document.head.appendChild(style);
-
-        // ...rest of existing JavaScript...
     </script>
 </body>
 </html>
