--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
         .about-features li {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             font-size: 1rem;
             font-weight: 500;
             color: var(--text-dark);
@@ -61,7 +61,13 @@
             padding: 0.5rem 0;
         }
         .about-features li i {
-            margin-right: 0.5rem;
+            margin-right: 0.75rem;
+            margin-top: 0.2rem;
+            flex-shrink: 0;
+        }
+        .about-features li span {
+            flex: 1;
+            line-height: 1.5;
         }
         :root {
             --primary-blue: #2563eb;
@@ -476,6 +482,11 @@
             }
             .about-features li span {
                 display: none;
+            }
+            .about-features li::after {
+                content: attr(data-title);
+                font-weight: 600;
+                margin-left: 0.5rem;
             }
             /* Hero Section */
             .hero-section {
@@ -1490,10 +1501,10 @@
                         <h2 class="section-title text-start mb-3">About Skyryse Technologies</h2>
                         <p class="mb-4">Founded in 2024, Skyryse Technologies is dedicated to driving digital innovation for businesses of all sizes. We deliver tailored IT solutions that empower organizations to transform, grow, and succeed in a rapidly evolving world.</p>
                         <ul class="about-features list-unstyled mb-4">
-                            <li><i class="fas fa-check-circle text-success"></i> <span><strong>Expert Team:</strong> Experienced professionals with deep technical expertise.</span><strong>Expert Team</strong></li>
-                            <li><i class="fas fa-check-circle text-success"></i> <span><strong>Quality Assurance:</strong> Commitment to delivering top-notch solutions.</span><strong>Quality Assurance</strong></li>
-                            <li><i class="fas fa-check-circle text-success"></i> <span><strong>24/7 Support:</strong> Always available to assist our clients.</span><strong>24/7 Support</strong></li>
-                            <li><i class="fas fa-check-circle text-success"></i> <span><strong>On-time Delivery:</strong> Projects completed within agreed timelines.</span><strong>On-time Delivery</strong></li>
+                            <li data-title="Expert Team"><i class="fas fa-check-circle text-success"></i> <span><strong>Expert Team:</strong> Experienced professionals with deep technical expertise.</span></li>
+                            <li data-title="Quality Assurance"><i class="fas fa-check-circle text-success"></i> <span><strong>Quality Assurance:</strong> Commitment to delivering top-notch solutions.</span></li>
+                            <li data-title="24/7 Support"><i class="fas fa-check-circle text-success"></i> <span><strong>24/7 Support:</strong> Always available to assist our clients.</span></li>
+                            <li data-title="On-time Delivery"><i class="fas fa-check-circle text-success"></i> <span><strong>On-time Delivery:</strong> Projects completed within agreed timelines.</span></li>
                         </ul>
                         <div class="bg-white rounded-3 p-3 shadow-sm mb-2">
                             <h5 class="mb-2" style="color: var(--primary-blue);">Our Mission</h5>
