--- a/index.html
+++ b/index.html
@@ -1430,10 +1430,11 @@
                     <h5>Skyryse Technologies</h5>
                     <p>Transforming businesses through innovative technology solutions. We help organizations leverage the power of technology to achieve their goals and stay competitive in the digital age.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com/in/skyryse"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://x.com/Skyryse_Tech"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="https://github.com/skyryse-tech"><i class="fab fa-github"></i></a>
+                        <a href="mailto:skyryse.technologies@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 col-6 mb-4">
