--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- Paste this entire block inside <head> of your homepage (replace all placeholders) -->
-<title>Skyryse Technologies — Custom Software, Cloud Engineering & Digital Transformation</title>
 <meta name="description" content="Skyryse Technologies builds secure, scalable software and cloud platforms. We deliver custom development, cloud engineering, DevOps & digital transformation for startups and enterprises." />
 <link rel="canonical" href="https://skyryse.tech/" />
 <meta name="robots" content="index, follow, max-snippet:320, max-image-preview:large" />
@@ -126,7 +124,7 @@
   ]
 }
 </script>
-    <title>Skyryse Technologies | Professional IT Solutions & Digital Transformation</title>
+    <title>Skyryse Technologies — Professional IT Solutions & Digital Transformation</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
