--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
     {
       "@type": "WebSite",
       "@id": "https://skyryse.tech/",
-      "url": "https://yourdomain.com",
+      "url": "https://skyryse.tech",
       "name": "Skyryse Technologies",
+      "alternateName":[
+        "Skyryse IT Company",
+        "Skyryse Tech Startup"],
       "publisher": {
         "@id": "https://skyryse.tech/#organization"
       },
