--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
   ]
 }
 </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Skyryse Technologies - IT Revolution",
+  "alternateName": [
+    "Skyryse Tech Startup",
+    "Skyryse Technologies"
+  ],
+  "url": "https://skyryse.tech/"
+}
+</script>
     <title>Skyryse Technologies — Professional IT Solutions & Digital Transformation</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
