--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <meta property="og:title" content="Skyryse Technologies — Custom Software, Cloud Engineering & Digital Transformation" />
 <meta property="og:description" content="Build and modernize with Skyryse Technologies — expert custom software, cloud engineering, DevOps, and digital transformation services for startups and enterprises." />
 <meta property="og:url" content="https://skyryse.tech/" />
-<meta property="og:image" content="https://skyryse.tech/skyryse.png" />
-<meta property="og:image:width" content="4096" />
-<meta property="og:image:height" content="4096" />
+<meta property="og:image" content="https://skyryse.tech/skyryse.jpg" />
+<meta property="og:image:width" content="512" />
+<meta property="og:image:height" content="512" />
 <meta property="og:image:alt" content="Skyryse Technologies logo and team — IT solutions & cloud engineering" />
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
