--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="skyryse.png" sizes="any">
+    <link rel="icon" type="image/x-icon" href="https://skyryse.tech/skyryse.ico">
     <style>
         .skyryse-brand {
             display: flex;
